--- a/package.json
+++ b/package.json
@@ -38,20 +38,21 @@
     "@vuelidate/validators": "^2.0.0",
     "@vuepic/vue-datepicker": "^4.2.1",
     "@vueuse/core": "^9.13.0",
+    "axios": "^1.11.0",
+    "gsap": "^3.5.1",
+    "lazysizes": "^5.3.2",
+    "leaflet": "^1.9.3",
     "prettier": "^3.6.2",
     "stylelint": "^16.21.1",
     "stylelint-config-standard-scss": "^15.0.1",
     "stylelint-order": "^7.0.0",
     "stylelint-scss": "^6.12.1",
-    "gsap": "^3.5.1",
-    "lazysizes": "^5.3.2",
-    "leaflet": "^1.9.3",
     "typescript": "^5.0.4",
     "vanilla-lazyload": "latest",
     "vue": "^3.2.45",
-    "vue3-carousel": "^0.2.9",
     "vue-currency-input": "^3.0.3",
-    "vue-tsc": "^1.8.18"
+    "vue-tsc": "^1.8.18",
+    "vue3-carousel": "^0.2.9"
   },
   "engines": {
     "node": "20.*"
